--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 #
-#     MakeFile pour generer mkdep
+#     MakeFile for mkdep
 #
-
+# $LAAS$
 #----------------------------------------------------------------------
 # Makefile variables
 
