--- a/configure.in
+++ b/configure.in
@@ -8,7 +8,7 @@ AC_PREREQ(2.1)
 
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_CHECK_HEADERS(unistd.h)
+AC_CHECK_HEADERS(unistd.h, [], AC_MSG_ERROR("Not a POSIX system"))
 AC_REPLACE_FUNCS(strlcat strlcpy)
 AC_C_CONST
 
@@ -30,6 +30,4 @@ VERSION=2.2
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 
-
 AC_OUTPUT(Makefile)
-AC_OUTPUT(config.h)
