Switch to automake

--- a/configure.ac
+++ b/configure.ac
@@ -3,8 +3,10 @@ dnl
 dnl $LAAS$
 dnl
 AC_REVISION($LAAS$)dnl
-AC_INIT([mkdep],[2.5],[openrobots@laas.fr])
+AC_INIT([mkdep],[2.6],[http://softs.laas.fr/openrobots/], mkdep)
 AC_PREREQ(2.59)
+AM_INIT_AUTOMAKE([dist-bzip2])
+AM_MAINTAINER_MODE
 
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -24,5 +26,12 @@ case ${host_os} in
    exeext=.exe
    ;;
 esac
+
+dnl --- GNU tar (for make dist only) ------------------------------------
+AC_ARG_VAR(TAR, [GNU tar command])
+AC_CHECK_PROGS(TAR, [gtar gnutar gnu-tar tar], [no])
+if test "x$TAR" = "xno"; then
+	AC_MSG_ERROR([Cannot find a tar program])
+fi
 
 AC_OUTPUT(Makefile mkdep.pc)
