--- a/Makefile.in
+++ b/Makefile.in
@@ -214,6 +214,7 @@ pkgconfig_DATA = mkdep.pc
 aclocaldir = $(datadir)/aclocal
 aclocal_DATA = mkdep.m4
 man_MANS = mkdep.1
+EXTRA_DIST = mkdep.m4 $(man_MANS)
 all: all-am
 
 .SUFFIXES:
